@@ -5,6 +5,7 @@ fsarchiver: Filesystem Archiver for Linux [http://www.fsarchiver.org]
 * 0.6.8 (2010-02-20):
   - Fixed compilation error on systems with recent kernel headers by including <sys/stat.h>
   - Fixed critial bug: there was a risk of corruption when the archive was written on a smbfs/cifs filesystem
+  - Fix in restoration: consider ENOSPC (no space left on device) as a fatal error and exit
 * 0.6.7 (2010-01-31):
   - Added support for sparse files (sparse file on the original disk will be recreated as sparse file)
   - Added per-archive minimum fsarchiver version requirement (MAINHEADKEY_MINFSAVERSION)
